# helix

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  HELIX.md  HELIX_MINI_PLAN.md  README.md  pyproject.toml
docs/: architecture.md  getting-started.md
docs/guides/: 01-first-project.md  02-version-control.md  03-branches-and-salvage.md  04-visualize-and-diagnose.md  05-models-and-privacy.md  06-watcher-and-web.md
docs/reference/: app.md  cli.md  web.md
src/helix/: __init__.py  app.py  cas.py  catchup.py  cli.py  cosign.py  decisionlog.py  doctor.py  explore.py  ids.py  loom.py  maintainer.py  notify.py  pages.py  prism.py  privacy.py  project.py  queue.py  routing.py  salvage.py  snapshot.py  upgrades.py  vc.py  watcher.py  web.py
src/helix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/helix/atlas/: __init__.py  graph.py  lint.py  proclock.py  retriever.py  store.py  writequeue.py
src/helix/forge/: __init__.py  agents.py  gateview.py  router.py  state.py  trust.py  workflow.py
tests/: conftest.py  test_cli.py  test_crossproc.py  test_decisionlog.py  test_explore.py  test_forge.py  test_hygiene.py  test_idindex.py  test_lint.py  test_loom_prism.py  test_maintainer.py  test_notify_catchup.py  test_pages.py  test_project.py  test_retriever.py  test_routing.py  test_salvage_doctor.py  test_security_pathtraversal.py  test_snapshot.py  test_status_filter.py  test_upgrades.py  test_vc.py  test_watcher.py  test_workflow.py  test_writequeue.py
